syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "actual_lrp.proto";
import "desired_lrp.proto";
import "task.proto";
import "modification_tag.proto";

message ActualLRPCreatedEvent  {
  ActualLRPGroup actual_lrp_group = 1;
}

message ActualLRPChangedEvent {
  ActualLRPGroup before = 1;
  ActualLRPGroup after = 2;
}

message ActualLRPRemovedEvent {
  ActualLRPGroup actual_lrp_group = 1;
}

message ActualLRPInstanceCreatedEvent  {
  ActualLRP actual_lrp = 1;
}

message ActualLRPInfo {
  ActualLRPNetInfo actual_lrp_net_info = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  int32 crash_count = 4;
  string crash_reason = 5 [(gogoproto.jsontag) = "crash_reason,omitempty"];
  string state = 6;
  string placement_error = 7 [(gogoproto.jsontag) = "placement_error,omitempty"];
  int64 since = 8;
  ModificationTag modification_tag = 9 [(gogoproto.nullable) = false];
  ActualLRP.Presence presence = 10;
}

message ActualLRPInstanceChangedEvent {
  ActualLRPKey actual_lrp_key                  = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  ActualLRPInstanceKey actual_lrp_instance_key = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  ActualLRPInfo before                         = 3;
  ActualLRPInfo after                          = 4;
}

message ActualLRPInstanceRemovedEvent {
  ActualLRP actual_lrp = 1;
}

message DesiredLRPCreatedEvent {
  DesiredLRP desired_lrp = 1;
}

message DesiredLRPChangedEvent {
  DesiredLRP before = 1;
  DesiredLRP after = 2;
}

message DesiredLRPRemovedEvent {
  DesiredLRP desired_lrp = 1;
}

message ActualLRPCrashedEvent {
  ActualLRPKey actual_lrp_key = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  ActualLRPInstanceKey actual_lrp_instance_key = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  int32 crash_count = 3;
  string crash_reason = 4 [(gogoproto.jsontag) = "crash_reason,omitempty"];
  int64 since = 5;
}

message EventsByCellId {
   string cell_id  = 1;
}

message TaskCreatedEvent {
  Task task = 1;
}

message TaskChangedEvent {
  Task before = 1;
  Task after = 2;
}

message TaskRemovedEvent {
  Task task = 1;
}
